--- a/trAIner/requirements.txt
+++ b/trAIner/requirements.txt
@@ -1,10 +1,16 @@
+beautifulsoup4==4.11.1
+bs4==0.0.1
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
 dnspython==2.2.1
 Faker==14.2.0
 Flask==2.2.2
+Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.4
 flask-validation-extended==0.2.1
 gunicorn==20.1.0
+idna==3.4
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -14,7 +20,11 @@ PyJWT==2.6.0
 pymongo==4.3.2
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+requests==2.28.1
+sejong-univ-auth==0.3.4
 six==1.16.0
+soupsieve==2.3.2.post1
+urllib3==1.26.12
 Werkzeug==2.2.2
 zipp==3.8.1
 torch==1.13.0
