--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -32,6 +32,11 @@ jobs:
       run: |
         aws s3 cp ${{ secrets.S3_CTR_MODEL_PATH }} trAIner/
     
+    - name: Download Production deep file from S3
+      id: download-deep-from-s3
+      run: |
+        aws s3 cp ${{ secrets.S3_DEEP_MODEL_PATH }} trAIner/
+    
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
