--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -19,6 +19,23 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: Configure AWS credentials for S3
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.S3_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.S3_SECRET_ACCESS_KEY }}
+        aws-region: ap-northeast-2
+    
+    - name: Download Production ctr file from S3
+      id: download-ctr-from-s3
+      run: |
+        aws s3 cp ${{ secrets.S3_CTR_MODEL_PATH }} trAIner/
+    
+    - name: Download Production deep file from S3
+      id: download-deep-from-s3
+      run: |
+        aws s3 cp ${{ secrets.S3_DEEP_MODEL_PATH }} trAIner/
     
     - name: Login to DockerHub
       uses: docker/login-action@v1
