--- a/trAIner/requirements.txt
+++ b/trAIner/requirements.txt
@@ -9,6 +9,7 @@ Flask==2.2.2
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.4
 flask-validation-extended==0.2.1
+gensim==4.2.0
 gunicorn==20.1.0
 idna==3.4
 importlib-metadata==4.12.0
@@ -21,14 +22,13 @@ pymongo==4.3.2
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 requests==2.28.1
+scipy==1.9.3
 sejong-univ-auth==0.3.4
 six==1.16.0
+smart-open==6.2.0
 soupsieve==2.3.2.post1
 torch==1.13.0
 typing_extensions==4.4.0
 urllib3==1.26.12
 Werkzeug==2.2.2
 zipp==3.8.1
-torch==1.13.0
-typing_extensions==4.4.0
-gensim==4.2.0
